# swiss-army-esp

./: .gitignore  README.md  sdkconfig  sdkconfig.old
components/ui/: CMakeLists.txt  file_list_gen.cmake  globals.xml  project.xml  swiss_army_knife.c  swiss_army_knife.h  swiss_army_knife_gen.c  swiss_army_knife_gen.h
components/ui/components/basic/bar/: bar_gen.c
components/ui/components/basic/button/: button.xml  button_gen.c
components/ui/components/basic/card/: card_gen.c  card_header.xml  card_header_gen.c
components/ui/components/basic/circle_button/: circle_button_gen.c
components/ui/components/basic/column/: column_gen.c
components/ui/components/basic/div/: div_gen.c
components/ui/components/basic/icon_button/: icon_button_gen.c
components/ui/components/basic/roller/: roller.xml  roller_gen.c
components/ui/components/basic/row/: row_gen.c
components/ui/components/basic/slider/: slider_gen.c
components/ui/components/basic/switch/: switch_gen.c
components/ui/components/basic/table/: table_gen.c
components/ui/components/cards/alarm/: alarm.xml  alarm_gen.c
components/ui/components/cards/light_temperature/: light_temperature.xml  light_temperature_gen.c
components/ui/components/cards/move_goal/: move_goal.xml  move_goal_gen.c  stat_col.xml  stat_col_gen.c
components/ui/components/cards/music_player/: music_player.xml  music_player_gen.c
components/ui/components/cards/speaker_volume/: speaker_volume.xml  speaker_volume_gen.c
components/ui/screens/: layout_gen.c  layout_gen.h
components/ui/widgets/battery/: battery_indikator.c
(+30 files in other folders)
